# go_proto_expression

./: AUTHORS  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod
genproto/: go.mod
genproto/github.com/kagadar/go_proto_expression/protoexpr/options/: options.pb.go
genproto/options/: BUILD.bazel  options.pb.go
proto/options/: BUILD.bazel  options.proto
protoexpr/: BUILD.bazel  protoexpr.go  protoexpr_test.go  protoexpr_test.proto  transpiler.go  transpiler_test.go
protoexpr/options/: BUILD.bazel  options.proto
protoexpr/test/: protoexpr_test.pb.go
tools/: regenerate_proto.sh
