load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@io_bazel_rules_go//go:def.bzl", "nogo")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])

# gazelle:exclude genproto/
# gazelle:exclude proto/
# gazelle:go_naming_convention import
# gazelle:prefix github.com/kagadar/go_proto_expression
# gazelle:resolve proto proto/options/options.proto //proto/options:kagadar_protoexpr_options_proto
# gazelle:resolve proto go proto/options/options.proto //genproto/options
# gazelle:resolve go github.com/kagadar/go_proto_expression/genproto/options //genproto/options
gazelle(name = "gazelle")

nogo(
    name = "nogo",
    vet = True,
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
    visibility = ["//visibility:public"],
)
