load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "protoexpr",
    srcs = ["protoexpr.go"],
    importpath = "github.com/kagadar/go_proto_expression/protoexpr",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_iancoleman_strcase//:strcase",
        "@go_googleapis//google/api/expr/v1alpha1:expr_go_proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/dynamicpb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@tech_einride_go_aip//filtering",
    ],
)
