load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "kagadar_protoexpr_options_proto",
    srcs = ["options.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "kagadar_protoexpr_options_go_proto",
    importpath = "github.com/kagadar/go_proto_expression/protoexpr/options",
    proto = ":kagadar_protoexpr_options_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "options",
    embed = [":kagadar_protoexpr_options_go_proto"],
    importpath = "github.com/kagadar/go_proto_expression/protoexpr/options",
    visibility = ["//visibility:public"],
)
